[package]
name = "rrt0"
version = "0.2.1"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/rust-console/rrt0"
description = "Simple cross-platform runtime / startup (like crt0)"
license = "MIT"
readme = "README.md"
categories = ["embedded"]
keywords = ["crt0", "runtime", "startup", "nintendo", "n64"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.test]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
libm = "0.2"
