[package]
name = "rrt0"
version = "0.3.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/rust-console/rrt0"
description = "Simple cross-platform runtime / startup (like crt0)"
license = "MIT"
readme = "README.md"
categories = ["embedded"]
keywords = ["crt0", "runtime", "startup", "nintendo", "n64"]
edition = "2018"

[dependencies]
libm = "0.2"
